# VMOverlay

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  LIBVIRT_SETUP.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  build.sh  config.example  vmoverlay.desktop  vmoverlay.service
src/: main.cpp  overlaymanager.cpp  overlaymanager.h  vmmanager.cpp  vmmanager.h  vmoverlayapp.cpp  vmoverlayapp.h
